<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fProfile"
    android:background="@drawable/gradient_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- First Name -->

        <TextView
            android:id="@+id/fNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="124dp"
            android:text="@string/profile_page_first_name"
            android:textSize="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/fNameEditText"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="156dp"
            android:hint="Enter your first name"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Last Name -->

        <TextView
            android:id="@+id/lNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/profile_page_last_name"
            android:textColor="@color/white"
            android:textSize="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fNameEditText" />

        <EditText
            android:id="@+id/lNameEditText"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:hint="Enter your last name"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lNameTextView" />

        <!-- Phone Number -->

        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/profile_page_phone_number"
            android:textColor="@color/white"
            android:textSize="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lNameEditText" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:hint="Enter your phone number"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="phone"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneTextView" />

        <!--Email-->

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/profile_page_email"
            android:textColor="@color/white"
            android:textSize="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:hint="Enter your email address"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTextView" />


        <Button
            android:id="@+id/saveProfileBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/indigo"
            android:text="Edit Profile"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText"
            app:layout_constraintVertical_bias="0.0"
            app:strokeColor="@color/black"
            app:strokeWidth="2.5dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/cardview"
            app:layout_constraintBottom_toTopOf="@+id/fNameTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="50dp">
            <ImageView
                android:id="@+id/profilePicture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                tools:srcCompat="@tools:sample/avatars" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="gone"
            android:id="@+id/profile_letter_picture"
            android:text=""
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:gravity="center"
            android:textSize="30sp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="temp_add_pic"
            android:id="@+id/temp_add_pic_id"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="2dp"
            app:layout_constraintRight_toLeftOf="@id/cardview"
            app:layout_constraintBottom_toTopOf="@id/fNameTextView"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>
        <ImageButton
            android:id="@+id/add_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_picture_foreground"
            app:layout_constraintBottom_toBottomOf="@id/cardview"
            app:layout_constraintRight_toRightOf="@id/cardview"
            android:translationZ="2dp"
            android:background="@drawable/circle"
            android:visibility="gone"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="temp_delete_pic"
            android:id="@+id/temp_delete_pic_id"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="2dp"
            app:layout_constraintRight_toLeftOf="@id/cardview"
            app:layout_constraintBottom_toTopOf="@id/fNameTextView"
            app:layout_constraintTop_toBottomOf="@id/temp_add_pic_id"
            android:visibility="gone"/>
        <ImageButton
            android:id="@+id/delete_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/cardview"
            app:layout_constraintRight_toRightOf="@id/cardview"
            android:src="@drawable/ic_delete_foreground"
            android:translationZ="2dp"
            android:background="@drawable/circle"
            android:visibility="gone"
            />
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Notifications:"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            android:layout_marginEnd="40dp"-->
<!--            android:textSize="19dp"/>-->
<!--        <Button-->
<!--            android:id="@+id/on_notifications"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:backgroundTint="@color/green1"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            android:visibility="visible"-->
<!--            android:text="On"-->
<!--            android:padding="0dp"-->
<!--            android:minHeight="5dp"-->
<!--            android:minWidth="35dp"/>-->
<!--        <Button-->
<!--            android:id="@+id/off_notifications"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:backgroundTint="@color/red1"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            android:visibility="gone"-->
<!--            android:text="Off"-->
<!--            android:padding="0dp"-->
<!--            android:minHeight="5dp"-->
<!--            android:minWidth="35dp"/>-->


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/on_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_on_notification_foreground"
            android:backgroundTint="@color/green1"
            app:maxImageSize="50dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/off_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_off_notification_foreground"
            android:backgroundTint="@color/darkRed"
            app:maxImageSize="50dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"/>

        <Button
            android:id="@+id/admin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Admin view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/darkRed"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/black"
            app:strokeWidth="2.5dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>