<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/scanQR"
        android:title="Scan Event QR"
        android:icon="@drawable/ic_home_foreground"/>
    <item
        android:id="@+id/notifications"
        android:title="Notifications"
        android:icon="@drawable/ic_notifications_foreground"/>
    <item
        android:id="@+id/facility"
        android:title="Facility"
        android:icon="@drawable/ic_facility_foreground" />
    <item
        android:id="@+id/waitlist"
        android:icon="@drawable/ic_waitlist_foreground"
        android:title="Events" />
    <item
        android:id="@+id/profile"
        android:title="Profile"
        android:icon="@drawable/ic_person_foreground"/>

</menu>
